# yandex_dl_course_6_private

./: .gitignore  NEREL_MultiTask_Notebook.ipynb  pyproject.toml
.cursor/rules/: create-prd.mdc  generate-tasks.mdc  helpers.mdc  language-policy.mdc  mcp-usage-policy.mdc  process-task-list.mdc  python-engineering-standards.mdc  pytorch-engineering-standards.mdc
assignment/: assignment.md
data/corpus/: Chekhov_Dama.txt  Chekhov_Dyadya.txt  Dostoyevski_Biesy.txt  Dostoyevski_Idiot.txt  Gogol_Mertvye.txt  Gogol_Taras.txt  Pushkin_Pikovaya.txt
notebooks/: LLM_Pretrain_SFT.ipynb  tokenizer.json
tasks/: 0001-prd-llm-pretrain-and-sft-russian.md  0002-prd-notebook-markdown-annotations.md  tasks-0001-prd-llm-pretrain-and-sft-russian.md  tasks-0002-prd-notebook-markdown-annotations.md
