[project]
name = "yandex-dl-course-6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy",
    "torch",
    "transformers",
    "tokenizers",
    "datasets",
    "trl",
    "jupyter"
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]
